[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = DHCPConfParser
author = Eitan Geiger
author_email = geigereitan@gmail.com
summary = parser for linux dhcpd.conf file
version = 0.0.1
description-file = README.md
license = GNU Public Licence, Version 3
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Public Licence
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    DHCPConfParser

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    jcli=DHCPConfParser.DHCPConfParser:main